[Phonebook][fix] fixed button display on safari ios

--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -42,6 +42,8 @@ body {
   background-color: rgba(255, 255, 255, 0.5);
   font-weight: 600;
   border-radius: 10%;
+  color: black;
+  border-color: black;
 }
 .button:hover {
   background-color: rgba(184, 183, 183, 0.5);
